Adiciona validações para as entidades e refatora projeto
