# docs/swagger.yaml
@@ -371,7 +371,7 @@ paths:
       security:
         - bearerAuth: []
       requestBody:
-        description: Lançamento a ser cadastrada
+        description: Transação a ser cadastrada
         required: true
         content:
           application/json:
@@ -412,7 +412,7 @@ paths:
         - bearerAuth: []
       responses:
         "200":
-          description: Lançamento encontrado
+          description: Transação encontrado
           content:
             application/json:
               schema:
@@ -420,7 +420,7 @@ paths:
         "401":
           $ref: "#/components/responses/UnauthorizedError"
         "404":
-          description: Lançamento não encontrado
+          description: Transação não encontrado
           content:
             application/json:
               schema:
@@ -432,7 +432,7 @@ paths:
       security:
         - bearerAuth: []
       requestBody:
-        description: Lançamento a ser atualizada
+        description: Transação a ser atualizada
         required: true
         content:
           application/json:
@@ -448,7 +448,7 @@ paths:
         "401":
           $ref: "#/components/responses/UnauthorizedError"
         "404":
-          description: Lançamento não encontrado
+          description: Transação não encontrado
           content:
             application/json:
               schema:
@@ -475,7 +475,7 @@ paths:
         "401":
           $ref: "#/components/responses/UnauthorizedError"
         "404":
-          description: Lançamento não encontrado
+          description: Transação não encontrado
           content:
             application/json:
               schema:
@@ -702,6 +702,7 @@ components:
           type: string
         usuario:
           $ref: "#/components/schemas/Usuario"
+          readOnly: true
       example:
         id: 5da507f9f02e184328a07db2
         nome: Banco do Brasil
@@ -716,14 +717,28 @@ components:
           readOnly: true
         nome:
           type: string
+        valor:
+          type: number
+        tipo:
+          type: string,
+          enum:
+            - Ganho
+            - Despesa
+        categoriaId:
+          $ref: "#/components/schemas/Categoria"
         conta:
           $ref: "#/components/schemas/Conta"
+          readOnly: true
         usuario:
           $ref: "#/components/schemas/Usuario"
+          readOnly: true
       example:
         id: 5da65a9ed96d201a60861bf9
         nome: Restaurante 123
+        valor: 25.00
+        tipo: Ganho
         usuario: 5da268bab917a843a850531a
+        categoria: 5da507f9f02e184328a07db5
         conta: 5da507f9f02e184328a07db2
       required:
         - nome
@@ -737,6 +752,7 @@ components:
           type: string
         usuario:
           $ref: "#/components/schemas/Usuario"
+          readOnly: true
       example:
         id: 5da268bab917a843a850531a
         nome: Eletrônicos
@@ -760,14 +776,14 @@ components:
                 type: string
             example:
               title: Não encontrado
-              detail: Lançamento de id 1 não foi encontrado
+              detail: Transação não encontrado
 tags:
   - name: usuarios
     description: Usuários
   - name: contas
     description: Contas
   - name: transacoes
-    description: Lançamentos
+    description: Transações
   - name: categorias
     description: Categorias
   - name: authorization
